# OpenPoseDotNet

./: .gitignore  .gitmodules  BuildLinux.sh  BuildMacOSX.sh  BuildWindowsVS2015.bat  BuildWindowsVS2019.bat  OpenPoseDotNet.sln  README.md
examples/: SymlinkBinary.ps1
examples/OpenPoseDemo/: CopyOpenPose.bat  CopyOpenPose.sh  CopyOpenPoseOnlyNative.bat  OpenPoseDemo.csproj  Program.cs  README.md  SymlinkBinary.bat  SymlinkBinary.ps1
examples/Tutorial/1_BodyFromImage/: Program.cs  README.md
examples/Tutorial/2_WholeBodyFromImage/: CopyOpenPose.bat  Program.cs  README.md
examples/Tutorial/3_KeyPointsFromImageConfigurable/: Program.cs
examples/TutorialAddModule/1_CustomPostProcessing/: CopyOpenPose.bat  CopyOpenPose.sh  Program.cs  README.md  SymlinkBinary.ps1  UserPostProcessing.cs  WUserPostProcessing.cs
examples/TutorialApiCpp/01_BodyFromImageDefault/: .gitignore  Program.cs  README.md  SymlinkBinary.bat
examples/TutorialApiCpp/01_BodyFromImageDefaultBitmap/: Program.cs  README.md
examples/TutorialApiCpp/01_BodyFromImageDefaultRawImage/: CopyOpenPose.sh  Program.cs  README.md  SymlinkBinary.bat
examples/TutorialApiCpp/02_WholeBodyFromImageDefault/: Program.cs  README.md
examples/TutorialApiCpp/03_KeyPointsFromImage/: CopyOpenPose.sh  Program.cs  README.md
examples/TutorialApiCpp/04_KeyPointsFromImages/: Program.cs  README.md
examples/TutorialApiCpp/05_KeyPointsFromImagesMultiGPU/: Program.cs  README.md
examples/TutorialApiCpp/06_AsynchronousCustomInput/: CopyOpenPose.sh  Program.cs  README.md
examples/TutorialApiCpp/06_FaceFromImage/: Program.cs  README.md
examples/TutorialApiCpp/07_AsynchronousCustomOutput/: CopyOpenPoseOnlyNative.bat  Program.cs  README.md  UserOutputClass.cs
examples/TutorialApiCpp/07_HandFromImage/: Program.cs  README.md
examples/TutorialApiCpp/08_AsynchronousCustomInputOutputAndDatum/: Program.cs  README.md  UserInputClass.cs  UserOutputClass.cs
examples/TutorialApiCpp/08_HeatmapsFromImage/: Program.cs  README.md
examples/TutorialApiCpp/09_AsynchronousCustomInput/: Program.cs
examples/TutorialApiCpp/09_FaceFromImage/: Program.cs  README.md
examples/TutorialApiCpp/09_KeyPointsFromHeatmaps/: Program.cs  README.md  SymlinkBinary.ps1
examples/TutorialApiCpp/10_AsynchronousCustomInput/: Program.cs  README.md  UserInputClass.cs
examples/TutorialApiCpp/10_AsynchronousCustomOutput/: Program.cs  README.md  UserOutputClass.cs
examples/TutorialApiCpp/10_HandFromImage/: Program.cs  README.md
examples/TutorialApiCpp/11_AsynchronousCustomInputMultiCamera/: Program.cs  README.md  UserInputClass.cs
examples/TutorialApiCpp/11_AsynchronousCustomInputOutputAndDatum/: Program.cs  UserInputClass.cs  UserOutputClass.cs
examples/TutorialApiCpp/11_AsynchronousCustomOutput/: CopyOpenPose.sh  Program.cs  README.md  UserOutputClass.cs
examples/TutorialApiCpp/11_SynchronousCustomInput/: CopyOpenPose.sh  Program.cs  README.md  WUserInput.cs
nuget/: BuildNuspec.CPU.bat  BuildNuspec.bat  BuildOSX.ps1  BuildUtils.ps1  BuildWindows.ps1  OpenPoseDotNet.nuspec
src/: BuildLinux.sh  BuildMacOSX.sh
src/OpenPoseDotNet/: Cv.cs  DatumType.cs  ErrorMode.cs  Flags.cs  IOpenPoseObject.cs  LoadImageFlag.cs  LogMode.cs  NativeMethods.cs  OpenPose.cs  OpenPoseDotNet.csproj  OpenPoseObject.cs  Priority.cs  SharedHandle.cs  ThreadManagerMode.cs
src/OpenPoseDotNet.Native/: Build.ps1  BuildLinux.sh  BuildMacOSX.sh  BuildWindowsVS2015.bat  CMakeLists.txt  version.rc.in
src/OpenPoseDotNet.Native/openpose/: defines.h  flags.cpp  flags.h  shared.h  stdvector.h
src/OpenPoseDotNet.Native/openpose/3d/: CameraParameterReader.cpp  CameraParameterReader.h
src/OpenPoseDotNet.Native/openpose/core/: Matrix.cpp  Matrix.h  array.h  cvMatToOpInput.cpp  cvMatToOpInput.h  cvMatToOpOutput.cpp  cvMatToOpOutput.h  datum.cpp  datum.h  macros.h  opOutputToCvMat.cpp  opOutputToCvMat.h  point.h  rectangle.h  scaleAndSizeExtractor.cpp  scaleAndSizeExtractor.h
src/OpenPoseDotNet.Native/openpose/custom/: custom.cpp  custom.h  customDatum.cpp  customDatum.h  customProcessing.cpp  customProcessing.h  customWorker.cpp  customWorker.h  customWrapper.cpp  customWrapper.h
src/OpenPoseDotNet.Native/openpose/filestream/: fileStream.cpp  fileStream.h
src/OpenPoseDotNet.Native/openpose/gpu/: gpu.h
src/OpenPoseDotNet.Native/openpose/gui/: frameDisplayer.cpp  frameDisplayer.h  gui.h  wGui.cpp  wGui.h
src/OpenPoseDotNet.Native/openpose/pose/: poseCpuRenderer.cpp  poseCpuRenderer.h  poseExtractorCaffe.cpp  poseExtractorCaffe.h  poseExtractorNet.cpp  poseExtractorNet.h  poseGpuRenderer.cpp  poseGpuRenderer.h  poseParameters.cpp  poseParameters.h  poseRenderer.cpp  poseRenderer.h
src/OpenPoseDotNet.Native/openpose/producer/: datumProducer.cpp  datumProducer.h  producer.cpp  producer.h  videoCaptureReader.cpp  videoCaptureReader.h  wDatumProducer.cpp  wDatumProducer.h  webcamReader.cpp  webcamReader.h
src/OpenPoseDotNet.Native/openpose/std/: array.h  shared_ptr.cpp  shared_ptr.h  string.h  vector.h
src/OpenPoseDotNet.Native/openpose/std/chrono/: time_point.cpp  time_point.h
src/OpenPoseDotNet.Native/openpose/thread/: threadManager.cpp  threadManager.h  workerConsumer.cpp  workerConsumer.h  workerProducer.cpp  workerProducer.h
src/OpenPoseDotNet.Native/openpose/user/: _userWorker.cpp  _userWorker.h  user.h  userWorker.cpp  userWorker.h  userWorkerConsumer.cpp  userWorkerConsumer.h  userWorkerProducer.cpp  userWorkerProducer.h
src/OpenPoseDotNet.Native/openpose/utilities/: check.cpp  check.h  errorAndLog.cpp  errorAndLog.h  flagsToOpenPose.cpp  flagsToOpenPose.h  profiler.cpp  profiler.h
src/OpenPoseDotNet.Native/openpose/wrapper/: wrapper.h  wrapperAuxiliary.cpp  wrapperAuxiliary.h  wrapperStructExtra.cpp  wrapperStructExtra.h  wrapperStructFace.cpp  wrapperStructFace.h  wrapperStructGui.cpp  wrapperStructGui.h  wrapperStructHand.cpp  wrapperStructHand.h  wrapperStructInput.cpp  wrapperStructInput.h  wrapperStructOutput.cpp  wrapperStructOutput.h  wrapperStructPose.cpp  wrapperStructPose.h
test/OpenPoseDotNet.Tests/: OpenPoseDotNet.Tests.csproj  packages.config
(+334 files in other folders)
